Fixed email and overflow in welcome pages

--- a/src/web/views/dashboard/pages/welcomePages/WelcomePages.module.css
+++ b/src/web/views/dashboard/pages/welcomePages/WelcomePages.module.css
@@ -1,6 +1,6 @@
 .alignmentWrapper{
-    width: 100vw;
-    height: 100vh;
+    width: 96vw;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
